2008-05-18  mohrmarc  <debian@miller-mohr.de>  (tiny change)

	* progmodes/fortran.el (fortran-font-lock-keywords-2): Add keywords for
	logic operators .eqv. and .neqv.

2008-05-17  David Hull <david@snap.com>  (tiny change)

	* vc-hg.el (vc-hg-annotate-command): Allow white space before
	version number.

2008-05-12  Simon Marshall  <simon@gnu.org>

	* obsolete/fast-lock.el (fast-lock-cache-directories): Remove "."
	from its default value and give it the risky-local-variable
	property (CVE-2008-2142).

2008-05-10  Reiner Steib  <reiner.steib@gmx.de>

	* smerge-mode.el (smerge-command-prefix): Fix custom type.

2008-05-05  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-read-date-get-relative): Interpret lone
	weekday abbreviation as relative to today.

2008-05-01  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom):
	Don't throw error if no file is found.

2008-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-replace-environment-variables): Remove it.
	There is a more simple solution.
	(tramp-file-name-handler): Apply `substitute-in-file-name' w/o
	Tramp file name handlers.

2008-04-28  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom): Make breakpoint
	icons work for assembler, i.e. FILE.s, FILE.S (not disassembly).
	(gdb-goto-breakpoint): Likewise for visiting breakpoints.
	(gdb-assembler-custom): Be careful not to match other addresses.

2008-04-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-replace-environment-variables): New defun.
	(tramp-file-name-handler): Use it.

2008-04-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-hunk-header-re-unified): Allow elided line counts.
	(diff-end-of-hunk, diff-unified->context, diff-fixup-modifs)
	(diff-sanity-check-hunk): Adjust code accordingly.

2008-04-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
